--- a/style/main.css
+++ b/style/main.css
@@ -1,23 +1,25 @@
 html{
   font-size: 16px;
+  margin: 0;
+  padding: 0;
 }
 body{
   font-family: sans-serif;
   background: white;
   font-size:16px;
+  margin: 0;
+  padding: 0;
 }
 
 .site-header{
   background: #EEF2F3; 
-  position: absolute;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   border-bottom: 1px solid #00000017;
   width: 100%;
   height: 105px;
-  top: 0;
-  right: 1px;
   z-index: 3000;
 }
 
@@ -104,26 +106,42 @@ body{
   /* letter-spacing: .75px; */
 }
 
+@media screen and (max-width: 1000px){
+  .dream-come-true-span{
+    display: block;
+    position: relative;
+    font-size: .65rem;
+    font-weight: bold;
+    top: -18px;
+    left: 160px;
+    width: 190px;
+  }
+}
+
 /* NAV THANGS */
 
 .nav-container{
-  /* background: #ff6593; */
+  /* background: #EEF2F3; */
+  /* background: pink; */
   display: flex;
   position: relative;
+  justify-content: center;
   align-items: center;
-  /* left: 620px; */
   float:right;
   height: 50px;  
-  width:35%;
-  bottom: 6px;
-  left: 12px;
+  width: 400px;
+  bottom: 7px;
 }
 .site-nav ul{
+  background: #EEF2F3;
   /* background: #317ff5; */
   display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  position: relative;
   height: 30px;
-  width: 85%;
-  margin: 0 auto;
+  width: 400px;
+  left:25px;
   list-style: none;
 }
 
@@ -133,12 +151,12 @@ body{
   display: flex;
   position: relative;
   padding: 2px;
-  padding-right: 20px;
   border-right: 2px solid #00000017;
   font-weight: 600;
   font-size: 16px;
   text-decoration: none;
   bottom: 20px;
+  right: 20px;
   transition: .1s ease all;
 }
 
@@ -151,11 +169,15 @@ body{
 }
 
 .second{
-  position: relative;
-  letter-spacing: 2px;
-  width: 60px;
-  left: 10px;
+  position: relative;  
+  width: 100px;
 }
+.third{
+  position:relative;
+  left: 22px;
+}
+
+
 
 /* DROPDOWN THANGS */
 
@@ -167,8 +189,7 @@ body{
   height: 8px;
   width:70px;
   top: 24px;
-  right: 24px;
-  /* right: 24px; */
+  right: 30px;
 }
 
 .dropdown-content{
@@ -179,11 +200,13 @@ body{
   overflow: hidden;
   margin: 0 4px;
   bottom: 20px;
-  /* width: 50px;  */
   height:4px; 
   border: 1px solid #fafafa00;
   transition: .1s ease all;
   } 
+  .fp2 {
+    top: 8px;
+  }
 
 .dropdown:hover .dropdown-content{
   transition: .1s ease all;
@@ -192,8 +215,7 @@ body{
   color: #0000006e;
   border: 1px solid #0000002c;
   border-top: 1px solid #fafafa00;
-  box-shadow: -5px 5px 60px #0000001e;
-  padding: 22px;
+  padding: 28px;
   bottom: 9px;
   z-index: 3000;
 }
@@ -201,13 +223,13 @@ body{
 
 .dropdown:hover .one{
   height: 400px;
-  width: 500px;
-  right: 230px;
+  width: 300px;
+  right: 130px;
 }
 .dropdown:hover .two{
-  height: 400px;
-  width: 500px;
-  right: 290px;
+  height: 460px;
+  width: 300px;
+  right: 190px;
 }
 /* MAIN THANGS */
 
@@ -215,34 +237,37 @@ body{
   /* background: #d9eaf9; */
   display: block;
   text-align: left;
-  position: relative;
   margin: 0 auto;
   width: 80%;
+  overflow: scroll;
   min-width: 450px;
-  height: 800px;
-  top: 90px;
+  height: 110%;
 }
 
 .about{
-  display: inline-block;
+  /* background: lightgreen; */
+  display: block;
   position: relative;
   width: 75%;
-  padding: 12px;
-  padding-top: 100px;
+  padding: 60px 20px;
+  
   text-align: left;
-  height: 700px;
+  border: 1px solid #fafafa00;
+  border-top: 0px;
   transition: .2s ease all;
 }
 .about:hover{
   transition: .2s ease all;
-  background: #0f2333b0; 
+  background: #07386100; 
+  border: 1px solid #0000002d;
+  border-top: 0px;
 }
 .about h1{
   background: #659aa923;
   color: #00000021;
   position: relative;
-  margin: 0 auto;
-  margin-bottom: 80px;
+  margin: 0 auto;           
+  margin-bottom: 90px;
   padding: 8px;
   width: 85%;
   min-width: 325px;
@@ -250,13 +275,12 @@ body{
   font-size: 8rem;
   word-wrap: break-word;
   text-align: center;
-  transition: .4s ease all;
+  transition: .2s ease all;
 }
 
 .about:hover h1{
-  transition: 1.5s ease all;
+  transition: .2s ease all;
   background: #659AA9;
-  
   color: black;
 }
 
@@ -272,39 +296,43 @@ body{
   width: 85%;
   line-height: 24px;
   padding: 8px;
-  transition: .4s ease all;
+  transition: .2s ease all;
 }
 
 .thrilled{
   background: #659AA9;
-  color:#fafafa00;
+  color: #ffffff;
   display: inline-block;
   text-align: center;
-  height: 1px;
+  height: 22px;
   width: 55px;
   letter-spacing: -1px;
   font-weight: 800;
-  transition: .2s ease all;
+  text-shadow: -2px 2px 1px #00000000;
+  box-shadow: -2px 2px 1px #00000000;
+  transition: .3s ease all;
 }
 .thrilled:hover{
-  transition: .2s ease all;
-  color: #ffffff;
-  text-shadow: -2px 2px 1px #000000d2;
-  box-shadow: -2px 2px 1px #00000070;
-  height: 22px;
+  transition: .3s ease all;
+  background: #d6568100;
+  border-radius: 4px;
+  color: #659AA9;
+  letter-spacing: -.5px;
+  text-shadow: -6px 8px 5px #0000006b;
 }
 
 .contact{
   display: block;
   position: relative;
   overflow: hidden;
-  border: 1px solid #fafafa;
+  border: 1px solid #000000bd;
+  border-radius: 4px;
   padding: 4px 12px;
   height: 30px;
   width: 55px;
   font-size: 1rem;
   top: 35px;
-  color: #fafafa;
+  color: #000000bd;
   transition: .2s ease all;
 }
 .contact:hover{
@@ -320,6 +348,7 @@ body{
   font-size:1rem;
 }
 
+
 .me{
   display: inline-block;
   position: relative;
@@ -329,18 +358,33 @@ body{
   transition: .2s ease all;
 }
 .contact:hover .me{
-  color: #fafafa;
+  color: #000000bd;
 }
 
+
 /* FOOTER THANGS */
-.footer{
-  /* background: #497986; */
-  background: blue;
+footer{
+  background: #497986;
   display: block;
+  position: absolute;
+  width: 100%;
+  height: 150px;
+}
+.footer-span{
+  /* background: #fd9494; */
+  color: #00000059;
+  display:block;
   position: relative;
   margin: 0 auto;
-  height: 200px;
+  top: 30px;
+  padding: 8px;
+  width: 75px;
+  height: 80px;
+  line-height: 15px;
+  text-align: center;
+  letter-spacing: -1.25px;
 }
+
 
 
 
